--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
