--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.8.0",
     "firebase": "^9.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.1.0"
   },
