--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^4.2.0",
     "react-charts": "^2.0.0-beta.7",
     "react-datepicker": "^4.8.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-draggable": "^4.4.5"
   },
   "devDependencies": {
     "eslint": "8.17.0",
