--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "chart.js": "^3.8.0",
     "firebase": "^9.8.3",
     "next": "12.1.6",
