--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "chart.js": "^3.8.0",
     "firebase": "^9.8.3",
     "i18next": "^21.8.10",
-    "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
-    "i18next-xhr-backend": "^3.2.2",
     "next": "12.1.6",
     "next-i18next": "^11.0.0",
     "react": "18.1.0",
@@ -24,8 +22,7 @@
     "react-charts": "^2.0.0-beta.7",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.1.0",
-    "react-draggable": "^4.4.5",
-    "react-i18next": "^11.17.2"
+    "react-draggable": "^4.4.5"
   },
   "devDependencies": {
     "eslint": "8.17.0",
